--- a/src/views/bmiCalculator.ejs
+++ b/src/views/bmiCalculator.ejs
@@ -7,13 +7,14 @@
     <title>BMI Calculator</title>
 </head>
 <body>
+    <h1>BMI Calculator</h1>
     <form action="/calculator" method="post">
         <!-- Weight -->
         <label for="Weight">Weight in Pounds</label>
         <input type="number" id="weight" name="weight">
 
         <!-- Height -->
-        <label for="Height">Height in Pounds</label>
+        <label for="Height">Height in Inches</label>
         <input type="number" id="height" name="height">
 
         <!-- Calculate BMI Button -->
